--- a/about.html
+++ b/about.html
@@ -9,5 +9,6 @@
 <body>
     <h1>welcome to about page</h1>
     <p>hello sir git us loading</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus alias placeat dignissimos ducimus soluta. Ab vel quasi tenetur. Debitis, eligendi possimus beatae ab fuga in a esse consectetur voluptate? Dolores.</p>
 </body>
 </html>
